Adjust ck homepage

--- a/ck-design/gallery.html
+++ b/ck-design/gallery.html
@@ -13,8 +13,12 @@ media="screen" />
 <script type="text/javascript" src="jquery.min.js"></script>
 <script type="text/javascript" src="gallery.js"></script>
 <div id="content">
-  <div id="gallery-picture" class="gallery" data-category="editorial"
-    data-ci="" data-editorial="" data-multimedia="" data-etc=""></div>
+  <div id="editorial" class="gallery" data-category="editorial"
+       data-index="" data-descr=""></div>
+  <div id="ci" class="gallery" data-category="ci" data-index="" data-descr=""></div>
+  <div id="multimedia" class="gallery" data-category="multimedia"
+       data-index"" data-descr=""></div>
+  <div id="etc" class="gallery" data-category="etc" data-index="" data-descr=""></div>
   <div id="gallery-box" class="gallery">
     <div id="leftarrow" class="arrow"></div>
     <div id="rightarrow" class="arrow"></div>
