--- a/Amberpharm/amberpharm.html
+++ b/Amberpharm/amberpharm.html
@@ -13,42 +13,22 @@
 
 <div id="nav">
   <ul>
-    <li><div id="nav-item1" class="nav-item" data-scrollpos="0"
-             data-hoverobj="#nav-item1"
-             data-active="Home/Home_aktiv.png"
-             data-mouseenter="Home/Home_mouseover.png"
-             data-mouseleave="Home/Home_ruhe.png"
-             data-navnumber="1"/></li>
-    <li><div id="nav-item2" class="nav-item" data-scrollpos="700"
-             data-hoverobj="#nav-item2"
-             data-active="Wirueberuns/Wirueberuns_aktiv.png"
-             data-mouseenter="Wirueberuns/Wirueberuns_mouseover.png"
-             data-mouseleave="Wirueberuns/Wirueberuns_ruhe.png"
-             data-navnumber="2"/></li>
-    <li><div id="nav-item3" class="nav-item" data-scrollpos="1400"
-             data-hoverobj="#nav-item3"
-             data-active="Produkte/Produkte_aktiv.png"
-             data-mouseenter="Produkte/Produkte_mouseover.png"
-             data-mouseleave="Produkte/Produkte_ruhe.png"
-             data-navnumber="3"/></li>
-    <li><div id="nav-item4" class="nav-item" data-scrollpos="2100"
-             data-hoverobj="#nav-item4"
-             data-active="Kontakt/Kontakt_aktiv.png"
-             data-mouseenter="Kontakt/Kontakt_mouseover.png"
-             data-mouseleave="Kontakt/Kontakt_ruhe.png"
-             data-navnumber="4"/></li>
-    <li><div id="nav-item5" class="nav-item" data-scrollpos="2800"
-             data-hoverobj="#nav-item5"
-             data-active="Impressum/Impressum_aktiv.png"
-             data-mouseenter="Impressum/Impressum_mouseover.png"
-             data-mouseleave="Impressum/Impressum_ruhe.png"
-             data-navnumber="5"></li>
+    <li><div id="nav-item1" class="nav-item"
+             data-navnumber="1">Home</div></li>
+    <li><div id="nav-item2" class="nav-item"
+             data-navnumber="2">Wir &uuml;ber uns</div></li>
+    <li><div id="nav-item3" class="nav-item"
+             data-navnumber="3">Produkte</div></li>
+    <li><div id="nav-item4" class="nav-item"
+             data-navnumber="4">Kontakt</div></li>
+    <li><div id="nav-item5" class="nav-item"
+             data-navnumber="5">Impressum</div></li>
   </ul>
   <div id="nav-line"></div>
 </div>
 
 <div id="content">
-  <div id="home-title"> Hautpflege auf h&ouml;chstem Niveau! </div>
+  <div id="home-title">Hautpflege auf h&ouml;chstem Niveau!</div>
   <div id="home-frame">
       <div id="slideshow" data-slidecount="4">
         <img src="Startseite/Slideshow_Bild1.png" class="first-slide slide"/>
@@ -66,6 +46,15 @@ Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie co
       </div>
   </div>
   <div id="products">
+    <div id="kreis1" class="kreis" data-hoverobj="#kreis1">
+      <div id="alge" class="product"></div>
+    </div>
+    <div id="kreis2" class="kreis" data-hoverobj="#kreis2">
+      <div id="auster" class="product"></div>
+    </div>
+    <div id="kreis3" class="kreis" data-hoverobj="#kreis3">
+      <div id="salz" class="product"></div>
+    </div>
   </div>
   <div id="contact">
   </div>
