Add hover effect for product circles (and some improvements)
- Add favicon
- Add divs for potential product view

--- a/Amberpharm/index.html
+++ b/Amberpharm/index.html
@@ -8,6 +8,7 @@
 <body>
 <script type="text/javascript" src="jquery.min.js"></script>
 <script type="text/javascript" src="amberpharm.js"></script>
+<link rel="icon" href="images/favicon.png" type="image/png" />
 
 <div id="logo"></div>
 
@@ -56,14 +57,53 @@ Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie co
       </div>
   </div>
   <div id="products">
-    <div id="kreis1" class="kreis" data-hoverobj="#kreis1">
+    <div id="kreis1" class="kreis" data-hoverobj="#kreis1"
+      data-product="#alge" data-dummy="#kreis1a">
+      <div id="kreis1a" class="dummy"></div>
       <div id="alge" class="product"></div>
     </div>
-    <div id="kreis2" class="kreis" data-hoverobj="#kreis2">
+    <div id="kreis2" class="kreis" data-hoverobj="#kreis2"
+      data-product="#auster" data-dummy="#kreis2a">
+      <div id="kreis2a" class="dummy"></div>
       <div id="auster" class="product"></div>
     </div>
-    <div id="kreis3" class="kreis" data-hoverobj="#kreis3">
+    <div id="kreis3" class="kreis" data-hoverobj="#kreis3"
+      data-product="#salz" data-dummy="#kreis3a">
+      <div id="kreis3a" class="dummy"></div>
       <div id="salz" class="product"></div>
+    </div>
+    <div id="product1" class="product-frame">
+      <h3 class="product-title">Regeneriernde Kraft aus dem Meer...die Alge!</h3><br>
+      <p class="product-text">
+Algen sind die &auml;ltesten pflanzlichen Lebewesen, die die Wissenschaft
+      kennt. Sie existieren seit Millionen von Jahren auf unserer Erde
+      unter den unterschiedlichsten Bedingungen. Welch unglaublicher
+      Lebenswille und welch unglaubliche Lebenskraft sind
+      erforderlich, um sich derart zu behaupten?<br><br>
+
+Seit tausenden von Jahren sind die heilende und regenerierenden Kr&auml;fte
+      von Algen aus &auml;lteren Kulturen &uuml;berliefert und bekannt. Die No.1
+      GENESIS Serie beschleunigt auf nat&auml;rliche Weise die
+      Zellerneuerung und sorgt so f&uuml;r ein schnelles Abschuppen der
+      Oberhaut. Aus der Palmaria-Palmata gewinnt Amberpharm einen sehr
+      hohen nat&uuml;rlichen Retinol (Vitamin A) Anteil, Aminos&auml;uren, die
+      kleinsten Eiwei&szlig;bausteine, sowie den gesamten Vitamin B-Komplex
+      und reichhaltige Mineralien. Der Omega CH-Aktivator gel&ouml;st in
+      levitiertem Wasser sorgt zus&auml;tzlich f&uumlr einen bisher nicht
+      gekannten Regenerationsschub in diesem Sektor.<br><br>
+
+Dank der Zusammenarbeit mit dem Alfred-Wegener-Institut f&uuml;r Polar und
+      Meeresforschung ist Amberpharm in der Lage, auf Rohstoffe wie
+      die Palmaria Palmata (Sylter Rotalge), die unter strengen
+      hygienischen Gesichtspunkten gez&uuml;chtet wird,
+      zur&uuml;ckzugreifen. Daraus entsteht f&uuml;r Sie eine Frische- und
+      Herkunftsgarantie, die sich in dem hohen Qualit&auml;tsniveau der
+      Produkte widerspiegelt. Durch ein speziell entwickeltes eigenes
+      Extraktionsverfahren, gewinnen wir f&uuml;r Ihre Haut die
+      hochwirksame regenerierende Kraft aus der Palmaria-Palmata.
+      </p>
+      <div id="product-image1" class="product-image image-alge1"></div>
+      <div id="product-image2" class="product-image image-alge2"></div>
     </div>
   </div>
   <div id="contact">
