Add missing files, remove redundant files and change names style and index

--- a/Amberpharm/index.html
+++ b/Amberpharm/index.html
@@ -41,10 +41,11 @@
 <div id="content">
   <div id="home-title">Hautpflege auf h&ouml;chstem Niveau!</div>
   <div id="home-frame">
-      <div id="slideshow" data-slidecount="4">
+      <div id="slideshow" data-slidecount="5">
         <img src="Startseite/Slideshow_Bild1.png" class="first-slide slide"/>
         <img src="Startseite/Slideshow_Bild2.png" class="slide"/>
         <img src="Startseite/Slideshow_Bild3.png" class="slide"/>
+        <img src="Startseite/Slideshow_Bild4.png" class="slide"/>
         <img src="Startseite/Slideshow_Bild4.png" class="slide"/>
       </div>
     </div>
