--- a/Amberpharm/amberpharm.html
+++ b/Amberpharm/amberpharm.html
@@ -8,32 +8,44 @@
 <body>
 <script type="text/javascript" src="jquery.min.js"></script>
 <script type="text/javascript" src="amberpharm.js"></script>
+<link rel="icon" href="images/favicon.png" type="image/png" />
 
 <div id="logo"></div>
 
 <div id="nav">
   <ul>
-    <li><div id="nav-item1" class="nav-item"
-             data-navnumber="1">Home</div></li>
-    <li><div id="nav-item2" class="nav-item"
-             data-navnumber="2">Wir &uuml;ber uns</div></li>
-    <li><div id="nav-item3" class="nav-item"
-             data-navnumber="3">Produkte</div></li>
-    <li><div id="nav-item4" class="nav-item"
-             data-navnumber="4">Kontakt</div></li>
-    <li><div id="nav-item5" class="nav-item"
-             data-navnumber="5">Impressum</div></li>
+    <li><div id="nav-item1a" class="nav">
+           <div id="nav-item1" class="nav-item"
+                data-navnumber="1">Home</div>
+        </div></li>
+    <li><div id="nav-item2a" class="nav">
+           <div id="nav-item2" class="nav-item"
+                data-navnumber="2">Wir &uuml;ber uns</div>
+        </div></li>
+    <li><div id="nav-item3a" class="nav">
+           <div id="nav-item3" class="nav-item"
+                data-navnumber="3">Produkte</div>
+        </div></li>
+    <li><div id="nav-item4a" class="nav">
+           <div id="nav-item4" class="nav-item"
+                data-navnumber="4">Kontakt</div>
+        </div></li>
+    <li><div id="nav-item5a" class="nav">
+           <div id="nav-item5" class="nav-item"
+                data-navnumber="5">Impressum</div>
+        </div></li>
   </ul>
-  <div id="nav-line"></div>
 </div>
-
+<div id="nav-line"></div>
+  
 <div id="content">
   <div id="home-title">Hautpflege auf h&ouml;chstem Niveau!</div>
   <div id="home-frame">
-      <div id="slideshow" data-slidecount="4">
+      <div id="slideshow" data-slidecount="5">
         <img src="Startseite/Slideshow_Bild1.png" class="first-slide slide"/>
         <img src="Startseite/Slideshow_Bild2.png" class="slide"/>
         <img src="Startseite/Slideshow_Bild3.png" class="slide"/>
+        <img src="Startseite/Slideshow_Bild4.png" class="slide"/>
         <img src="Startseite/Slideshow_Bild4.png" class="slide"/>
       </div>
     </div>
@@ -46,14 +58,121 @@ Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie co
       </div>
   </div>
   <div id="products">
-    <div id="kreis1" class="kreis" data-hoverobj="#kreis1">
-      <div id="alge" class="product"></div>
+    <div id="product-selection">
+      <div id="kreis1" class="kreis" data-hoverobj="#kreis1"
+           data-product="#alge" data-dummy="#kreis1a">
+        <div id="kreis1a" class="dummy"></div>
+        <div id="alge" class="product" data-product="#product1"></div>
+      </div>
+      <div id="kreis2" class="kreis" data-hoverobj="#kreis2"
+           data-product="#auster" data-dummy="#kreis2a">
+        <div id="kreis2a" class="dummy"></div>
+        <div id="auster" class="product" data-product="#product2"></div>
+      </div>
+      <div id="kreis3" class="kreis" data-hoverobj="#kreis3"
+           data-product="#salz" data-dummy="#kreis3a">
+        <div id="kreis3a" class="dummy"></div>
+        <div id="salz" class="product" data-product="#product3"></div>
+      </div>
     </div>
-    <div id="kreis2" class="kreis" data-hoverobj="#kreis2">
-      <div id="auster" class="product"></div>
+    <div id="product1" class="product-frame">
+      <h3 class="product-title">Regeneriernde Kraft aus dem Meer...die Alge!</h3><br>
+      <p class="product-text">
+  Algen sind die &auml;ltesten pflanzlichen Lebewesen, die die Wissenschaft
+        kennt. Sie existieren seit Millionen von Jahren auf unserer Erde
+        unter den unterschiedlichsten Bedingungen. Welch unglaublicher
+        Lebenswille und welch unglaubliche Lebenskraft sind
+        erforderlich, um sich derart zu behaupten?<br><br>
+    
+  Seit tausenden von Jahren sind die heilende und regenerierenden Kr&auml;fte
+        von Algen aus &auml;lteren Kulturen &uuml;berliefert und bekannt. Die No.1
+        GENESIS Serie beschleunigt auf nat&auml;rliche Weise die
+        Zellerneuerung und sorgt so f&uuml;r ein schnelles Abschuppen der
+        Oberhaut. Aus der Palmaria-Palmata gewinnt Amberpharm einen sehr
+        hohen nat&uuml;rlichen Retinol (Vitamin A) Anteil, Aminos&auml;uren, die
+        kleinsten Eiwei&szlig;bausteine, sowie den gesamten Vitamin B-Komplex
+        und reichhaltige Mineralien. Der Omega CH-Aktivator gel&ouml;st in
+        levitiertem Wasser sorgt zus&auml;tzlich f&uumlr einen bisher nicht
+        gekannten Regenerationsschub in diesem Sektor.<br><br>
+    
+  Dank der Zusammenarbeit mit dem Alfred-Wegener-Institut f&uuml;r Polar und
+        Meeresforschung ist Amberpharm in der Lage, auf Rohstoffe wie
+        die Palmaria Palmata (Sylter Rotalge), die unter strengen
+        hygienischen Gesichtspunkten gez&uuml;chtet wird,
+        zur&uuml;ckzugreifen. Daraus entsteht f&uuml;r Sie eine Frische- und
+        Herkunftsgarantie, die sich in dem hohen Qualit&auml;tsniveau der
+        Produkte widerspiegelt. Durch ein speziell entwickeltes eigenes
+        Extraktionsverfahren, gewinnen wir f&uuml;r Ihre Haut die
+        hochwirksame regenerierende Kraft aus der Palmaria-Palmata.
+      </p>
+      <div id="image-alge1" class="product-image"></div>
+      <div id="image-alge2" class="product-image"></div>
     </div>
-    <div id="kreis3" class="kreis" data-hoverobj="#kreis3">
-      <div id="salz" class="product"></div>
+    <div id="product2" class="product-frame">
+      <h3 class="product-title">Kraftvoller Schutz aus dem Meer... die
+        Auster!</h3>
+      <br>
+      <p class="product-text">
+  Seit Millionen von Jahren behaupten sie sich ohne gro&szlig;e Ver&auml;nderungen. 
+        Sie trotzen der Zeit und jeglichen Umwelteinfl&uuml;ssen. Diese
+        nat&uuml;rliche Wissen macht sich Amberpharm in der
+        Produktlinie Perl zu eigen.
+      <br><br>
+  Wer h&auml;tte gedacht, das das gewonnene Perlmutt, feinst zermahlen
+        in seine  mikroskopisch kleinsten Bestandteile wie ein Schild
+        gegen das gesamte Lichtspektrum der Sonne wirkt? Das 25 - 50%
+        des Lichts reflektiert wird und dies ohne Chemie und frei von
+        div. Oxiden, die heute in fast allen Sonnencremes Verwendung
+        finden?
+      <br><br>
+  Auch weitere Bestandteile der Schale, reich an Mineralien verwenden
+        wir z.B. in unserem Peeling. Es dient der mechanischen Abnahme
+        der obersten Hautschichten im Gesicht und gibt ihr parallel
+        wichtige Mineralstoffe zur&uuml;ck.
+      <br><br>
+Unsere Forschung...unsere Ideen, lassen verbl&uuml;ffende und sinnvolle
+        Produkte entstehen, zum Wohle Ihrer Haut!
+      </p>
+      <div id="image-auster1" class="product-image"></div>
+      <div id="image-auster2" class="product-image"></div>
+    </div>
+    <div id="product3" class="product-frame">
+      <h3 class="product-title">Die Urkraft aus dem Meer...unser Salz!</h3><br>
+      <p class="product-text">
+Entsprechend allen Strukturen unseres K&ouml;rpers, besteht  auch unsere
+        Haut aus einer Zusammensetzung verschiedener Zellen. Jede
+        einzelne Zelle, die kleinste Einheit des Organismus, basiert
+        auf einer hoch salzhaltigen Fl&uuml;ssigkeit, der
+        Zellularfl&uuml;ssigkeit.
+      <br><br>
+Kommt hier der Salzgehalt der Epithelzellen aus dem Gleichgewicht,
+        sind Hauterkrankungen-u. Sch&auml;digungen wie z.B. besonders
+        empfindliche Haut, trockene oder juckende Haut usw. die
+        Folge. Genau hier setzen wir an.
+      <br><br>
+Nach einer fast 15-j&auml;hrigen Forschungs- u. Entwicklungsphase ist es
+        Amberpharm mit neuesten Technologien gelungen, eine
+        au&szlig;ergew&ouml;hnliche Rezeptur die &laquo; SALTcare
+        Serie &raquo; zu
+        verwirklichen. In einem h&ouml;chst aufwendigem Verfahren bleibt
+        die nat&uuml;rliche Wirksamkeit aller Rohstoffe in ihrer
+        urspr&uuml;nglichen Form erhalten.
+      <br><br>
+SALTcare-Produkte sind eine nat&uuml;rliche Alternative. Sie regen den
+        Selbstheilungsprozess der Haut an und helfen ihr so, sich
+        selbst zu helfen, indem der Salzhaushalt auf sanfte Weise
+        reguliert wird. Mehr als nur feuchtigkeitsspendend, h&auml;lt sie
+        Feuchtigkeit langanhaltend und dabei verzichten wir auf alle
+        fraglichen Inhaltsstoffe wie z.B. Mineral&ouml;le,
+        halogenorganische Konservierungsstoffe, Farb- u. Duftstoffe.
+      <br><br>
+Damit unterscheiden wir uns von 80% aller anderen Hersteller auf dem
+        Markt, f&uuml;r das Wohlbefinden Ihrer Haut.
+      <br><br>
+<a href="http://www.saltcream.kr" alt="SALTcream">http://www.saltcream.kr</a>
+      </p>
+      <div id="image-salz1" class="product-image"></div>
+      <div id="image-salz2" class="product-image"></div>
     </div>
   </div>
   <div id="contact">
@@ -69,9 +188,35 @@ Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie co
       <p>Mail: info(at)amberpharm.de</p>
     </div>
     <div id="impressum-text">
-      Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
-
-Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit.
+      <p>AMBERPHARM GmbH<br>
+Die Amberpharm GmbH ist eine Gesellschaft mit beschr&auml;nkter Haftung
+        deutschen Rechts mit Hauptsitz in Husum an der Nordsee. Sie
+        ist im Handelsregister des Amtsgerichts Flensburg unter der
+        Nummer HRB 58 63 eingetragen und stellt Naturkosmetik unter
+        den gesetzlichen Bestimmungen der deutschen Kosmetikverordnung
+        her. Gesch&auml;ftsf&uuml;hrer Marco Lorenzen.
+      <br><br>
+Die Gesellschaft t&auml;tigt eine Vielzahl von In- und Auslandsgesch&auml;ften,
+        einschlie&szlig;lich Herstellung und Handel im gesamten europ&auml;ischen
+        Raum.
+      <br><br>
+Amberpharm GmbH<br>
+M&uuml;hlenweg 29<br>
+25813 Husum Nordsee<br>
+Tel.: +49 4841-807928<br>
+Fax: +49 4841-779914<br>
+Service-Hotline: 0700 80 30 20 10<br>
+E-Mail: info(at)amberpharm.net<br>
+      <br><br>
+Die Umsatzsteuer-Identifikationsnummer der Amberpharm GmbH, Husum
+        Nordsee, (gem&auml;&szlig; Artikel 22 (1) der Sechsten Richtlinie
+        77/388/EWG vom 17. Mai 1977 zur Harmonisierung der
+        Rechtsvorschriften der Mitgliedstaaten der Europ&auml;ischen
+        Gemeinschaft &uuml;ber die Umsatzsteuer) lautet DE250426701.
+      <br><br>
+&copy; Amberpharm GmbH, Husum Nordsee.<br>
+Alle Rechte vorbehalten.
+        </p>
       </div>
 </div>
 
