Some minor fixes
- scrollTop on loading (due to larger content on the product pages)
- scrollTop when navigating
- set nices shadow boxes

--- a/Amberpharm/amberpharm.html
+++ b/Amberpharm/amberpharm.html
@@ -206,7 +206,7 @@ M&uuml;hlenweg 29<br>
 Tel.: +49 4841-807928<br>
 Fax: +49 4841-779914<br>
 Service-Hotline: 0700 80 30 20 10<br>
-E-Mail: info(at)amberpharm.net<br>
+E-Mail: info(at)amberpharm.net
       <br><br>
 Die Umsatzsteuer-Identifikationsnummer der Amberpharm GmbH, Husum
         Nordsee, (gem&auml;&szlig; Artikel 22 (1) der Sechsten Richtlinie
