Add new product menu

--- a/Amberpharm/amberpharm.html
+++ b/Amberpharm/amberpharm.html
@@ -10,34 +10,35 @@
 <script type="text/javascript" src="amberpharm.js"></script>
 <link rel="icon" href="images/favicon.png" type="image/png" />
 
-<div id="logo"></div>
+<div id="fixed">
+  <div id="logo"></div>
 
-<div id="nav">
-  <ul>
-    <li><div id="nav-item1a" class="nav">
-           <div id="nav-item1" class="nav-item"
-                data-navnumber="1">Home</div>
-        </div></li>
-    <li><div id="nav-item2a" class="nav">
-           <div id="nav-item2" class="nav-item"
-                data-navnumber="2">Wir &uuml;ber uns</div>
-        </div></li>
-    <li><div id="nav-item3a" class="nav">
-           <div id="nav-item3" class="nav-item"
-                data-navnumber="3">Produkte</div>
-        </div></li>
-    <li><div id="nav-item4a" class="nav">
-           <div id="nav-item4" class="nav-item"
-                data-navnumber="4">Kontakt</div>
-        </div></li>
-    <li><div id="nav-item5a" class="nav">
-           <div id="nav-item5" class="nav-item"
-                data-navnumber="5">Impressum</div>
-        </div></li>
-  </ul>
+  <div id="nav">
+    <ul>
+      <li><div id="nav-item1a" class="nav">
+             <div id="nav-item1" class="nav-item"
+                  data-navnumber="1">Home</div>
+          </div></li>
+      <li><div id="nav-item2a" class="nav">
+             <div id="nav-item2" class="nav-item"
+                  data-navnumber="2">Wir &uuml;ber uns</div>
+          </div></li>
+      <li><div id="nav-item3a" class="nav">
+             <div id="nav-item3" class="nav-item"
+                  data-navnumber="3">Produkte</div>
+          </div></li>
+      <li><div id="nav-item4a" class="nav">
+             <div id="nav-item4" class="nav-item"
+                  data-navnumber="4">Kontakt</div>
+          </div></li>
+      <li><div id="nav-item5a" class="nav">
+             <div id="nav-item5" class="nav-item"
+                  data-navnumber="5">Impressum</div>
+          </div></li>
+    </ul>
+  </div>
+  <div id="nav-line"></div>
 </div>
-<div id="nav-line"></div>
-  
 <div id="content">
   <div id="home-title">Hautpflege auf h&ouml;chstem Niveau!</div>
   <div id="home-frame">
@@ -75,7 +76,8 @@ Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie co
         <div id="salz" class="product" data-product="#product3"></div>
       </div>
     </div>
-    <div id="product1" class="product-frame">
+    <div id="product-frame">
+    <div id="product1">
       <h3 class="product-title">Regeneriernde Kraft aus dem Meer...die Alge!</h3><br>
       <p class="product-text">
   Algen sind die &auml;ltesten pflanzlichen Lebewesen, die die Wissenschaft
@@ -174,6 +176,7 @@ Damit unterscheiden wir uns von 80% aller anderen Hersteller auf dem
       <div id="image-salz1" class="product-image"></div>
       <div id="image-salz2" class="product-image"></div>
     </div>
+  </div>
   </div>
   <div id="contact">
   </div>
