--- a/Amberpharm/amberpharm.html
+++ b/Amberpharm/amberpharm.html
@@ -221,8 +221,25 @@ Die Umsatzsteuer-Identifikationsnummer der Amberpharm GmbH, Husum
 Alle Rechte vorbehalten.
         </p>
       </div>
+   </div>
 </div>
-
+<div class="bubble11"></div>
+<div class="bubble12"></div>
+<div class="bubble21"></div>
+<div class="bubble22"></div>
+<div id="home311" class="bubble31 movable"
+     data-speed="-1.25" data-offset="0" data-vis="always"></div>
+<div id="home321" class="bubble32"></div>
+<div id="home322" class="bubble32"></div>
+<div class="bubble41"></div>
+<div class="bubble42"></div>
+<div class="bubble51"></div>
+<div class="bubble52"></div>
+<div id="home611" class="bubble61"></div>
+<div id="home621" class="bubble62"></div>
+<div id="home622" class="bubble62"></div>
+<div class="bubble7_1"></div>
+<div class="bubble7_2"></div>
 <div id="preload"></div>
 
 </address>
