Add first bubbles, contact formular (without the actual functionality) and fix product navigation bug

--- a/Amberpharm/amberpharm.html
+++ b/Amberpharm/amberpharm.html
@@ -40,6 +40,9 @@
   <div id="nav-line"></div>
 </div>
 <div id="content">
+  <div id="home622" class="bubble62"
+     data-startx="" data-starty=""
+     data-x="100" data-y="50"></div>
   <div id="home-title">Hautpflege auf h&ouml;chstem Niveau!</div>
   <div id="home-frame">
       <div id="slideshow" data-slidecount="5">
@@ -179,6 +182,25 @@ Damit unterscheiden wir uns von 80% aller anderen Hersteller auf dem
   </div>
   </div>
   <div id="contact">
+    <div id="contact-info">
+      <p>Amberpharm GmbH</p>
+      <br>
+      <p>Marco Lorenzen GF</p>
+      <p>Otto-Hahn-Stra&szlig;</p>
+      <p>25813 Husum </p>
+      <br><br>
+      <p>Tel: 0700 80 30 20 10</p>
+      <p>Mail: info(at)amberpharm.de</p>
+    </div>
+    <div id="contact-form">
+      <form method="post" enctype="application/x-www-form-urlencoded">
+        <input id="contact-name" type="text" placeholder="Name">
+        <input id="contact-mail" type="email" placeholder="E-Mail">
+        <textarea id="contact-msg" placeholder="Nachricht"></textarea>
+        <input id="contact-button" type=submit value="Abschicken">
+      </form>
+      
+    </div>
   </div>
   <div id="impressum">
     <div id="impressum-info">
@@ -228,16 +250,24 @@ Alle Rechte vorbehalten.
 <div class="bubble21"></div>
 <div class="bubble22"></div>
 <div id="home311" class="bubble31 movable"
-     data-speed="-1.25" data-offset="0" data-vis="always"></div>
-<div id="home321" class="bubble32"></div>
-<div id="home322" class="bubble32"></div>
+     data-startx="" data-starty=""
+     data-x="50" data-y="-33"></div>
+<div id="home321" class="bubble32 movable"
+     data-startx="" data-starty=""
+     data-x="50" data-y="-33"></div>
+<div id="home322" class="bubble32 movable"
+     data-startx="" data-starty=""
+     data-x="20" data-y="-10"></div>
 <div class="bubble41"></div>
 <div class="bubble42"></div>
 <div class="bubble51"></div>
 <div class="bubble52"></div>
-<div id="home611" class="bubble61"></div>
-<div id="home621" class="bubble62"></div>
-<div id="home622" class="bubble62"></div>
+<div id="home611" class="bubble61 movable"
+     data-startx="" data-starty=""
+     data-x="-150" data-y="100"></div>
+<div id="home621" class="bubble62 movable"
+     data-startx="" data-starty=""
+     data-x="50" data-y="-33"></div>
 <div class="bubble7_1"></div>
 <div class="bubble7_2"></div>
 <div id="preload"></div>
