Adjust bubble positions and speed

--- a/Amberpharm/amberpharm.html
+++ b/Amberpharm/amberpharm.html
@@ -40,9 +40,6 @@
   <div id="nav-line"></div>
 </div>
 <div id="content">
-  <div id="home622" class="bubble62"
-     data-startx="" data-starty=""
-     data-x="100" data-y="50"></div>
   <div id="home-title">Hautpflege auf h&ouml;chstem Niveau!</div>
   <div id="home-frame">
       <div id="slideshow" data-slidecount="5">
@@ -193,18 +190,18 @@ Damit unterscheiden wir uns von 80% aller anderen Hersteller auf dem
       <p>Mail: info(at)amberpharm.de</p>
     </div>
     <div id="contact-form">
-      <form method="post" enctype="application/x-www-form-urlencoded">
+      <!--form method="post" enctype="application/x-www-form-urlencoded">
         <input id="contact-name" type="text" placeholder="Name">
         <input id="contact-mail" type="email" placeholder="E-Mail">
         <textarea id="contact-msg" placeholder="Nachricht"></textarea>
         <input id="contact-button" type=submit value="Abschicken">
-      </form>
+      </form-->
       
     </div>
   </div>
   <div id="impressum">
     <div id="impressum-info">
-      <h3>Amberpharm GmbH</h3>
+      <p>Amberpharm GmbH</p><br>
       <p>Marco Lorenzen GF</p>
       <p>Otto-Hahn-Str. 8</p>
       <p>25813 Husum</p>
@@ -245,31 +242,84 @@ Alle Rechte vorbehalten.
       </div>
    </div>
 </div>
-<div class="bubble11"></div>
-<div class="bubble12"></div>
-<div class="bubble21"></div>
-<div class="bubble22"></div>
-<div id="home311" class="bubble31 movable"
+<!-- home -->
+<div id="home311" class="bubble31 movable layer3"
      data-startx="" data-starty=""
-     data-x="50" data-y="-33"></div>
-<div id="home321" class="bubble32 movable"
+     data-x="-350" data-y="0"></div>
+<div id="home321" class="bubble32 movable layer3"
      data-startx="" data-starty=""
-     data-x="50" data-y="-33"></div>
-<div id="home322" class="bubble32 movable"
+     data-x="-350" data-y="0"></div>
+<div id="home322" class="bubble32 movable layer3"
      data-startx="" data-starty=""
-     data-x="20" data-y="-10"></div>
-<div class="bubble41"></div>
-<div class="bubble42"></div>
-<div class="bubble51"></div>
-<div class="bubble52"></div>
-<div id="home611" class="bubble61 movable"
+     data-x="-100" data-y="0"></div>
+<div id="home611" class="bubble61 movable layer11"
      data-startx="" data-starty=""
-     data-x="-150" data-y="100"></div>
-<div id="home621" class="bubble62 movable"
+     data-x="-500" data-y="0"></div>
+<div id="home621" class="bubble62 movable layer3"
      data-startx="" data-starty=""
-     data-x="50" data-y="-33"></div>
-<div class="bubble7_1"></div>
-<div class="bubble7_2"></div>
+     data-x="-300" data-y="0"></div>
+  <div id="home622" class="bubble62 movable layer2"
+     data-startx="" data-starty=""
+     data-x="" data-y="0"></div>
+     <div class="bubble11"></div>
+<!-- about -->
+<div id="about621" class="bubble62 movable layer3"
+     data-startx="" data-starty=""
+     data-x="" data-y="0"></div>
+<div id="about321" class="bubble32 movable layer2"
+     data-startx="" data-starty=""
+     data-x="" data-y="0"></div>
+<div id="about411" class="bubble41 movable layer1"
+     data-startx="" data-starty=""
+     data-x="-1000" data-y="0"></div>
+<div id="about111" class="bubble11 movable layer1"
+     data-startx="" data-starty=""
+     data-x="-1000" data-y="0"></div>
+<!-- products -->
+<div id="products321" class="bubble32 movable layer2"
+     data-startx="" data-starty=""
+     data-x="" data-y="0"></div>
+<div id="products721" class="bubble32 movable layer3"
+     data-startx="" data-starty=""
+     data-x="" data-y="0"></div>
+<div id="products411" class="bubble41 movable layer1"
+     data-startx="" data-starty=""
+     data-x="" data-y="0"></div>
+<div id="products521" class="bubble52 movable layer2"
+     data-startx="" data-starty=""
+     data-x="" data-y="0"></div>
+<!-- contact -->
+<div id="contact421" class="bubble42 movable layer2"
+     data-startx="" data-starty=""
+     data-x="" data-y="0"></div>
+<div id="contact721" class="bubble72 movable layer3"
+     data-startx="" data-starty=""
+     data-x="" data-y="0"></div>
+<div id="contact611" class="bubble61 movable layer1"
+     data-startx="" data-starty=""
+     data-x="" data-y="0"></div>
+<div id="contact621" class="bubble62 movable layer2"
+     data-startx="" data-starty=""
+     data-x="" data-y="0"></div>
+<div id="contact622" class="bubble62 movable layer3"
+     data-startx="" data-starty=""
+     data-x="" data-y="0"></div>
+<div id="contact711" class="bubble71 movable layer1"
+     data-startx="" data-starty=""
+     data-x="" data-y="0"></div>
+<!-- impressum -->
+<div id="impressum721" class="bubble72 movable layer2"
+     data-startx="" data-starty=""
+     data-x="" data-y="0"></div>
+<div id="impressum121" class="bubble12 movable layer2"
+     data-startx="" data-starty=""
+     data-x="" data-y="0"></div>
+<div id="impressum321" class="bubble32 movable layer3"
+     data-startx="" data-starty=""
+     data-x="" data-y="0"></div>
+<div id="impressum611" class="bubble61 movable layer1"
+     data-startx="" data-starty=""
+     data-x="" data-y="0"></div>
 <div id="preload"></div>
 
 </address>
