--- a/Amberpharm/amberpharm.html
+++ b/Amberpharm/amberpharm.html
@@ -77,7 +77,7 @@ Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie co
       </div>
     </div>
     <div id="product-frame">
-    <div id="product1">
+    <div id="product1" class="product-page">
       <h3 class="product-title">Regeneriernde Kraft aus dem Meer...die Alge!</h3><br>
       <p class="product-text">
   Algen sind die &auml;ltesten pflanzlichen Lebewesen, die die Wissenschaft
@@ -110,7 +110,7 @@ Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie co
       <div id="image-alge1" class="product-image"></div>
       <div id="image-alge2" class="product-image"></div>
     </div>
-    <div id="product2" class="product-frame">
+    <div id="product2" class="product-page">
       <h3 class="product-title">Kraftvoller Schutz aus dem Meer... die
         Auster!</h3>
       <br>
@@ -138,7 +138,7 @@ Unsere Forschung...unsere Ideen, lassen verbl&uuml;ffende und sinnvolle
       <div id="image-auster1" class="product-image"></div>
       <div id="image-auster2" class="product-image"></div>
     </div>
-    <div id="product3" class="product-frame">
+    <div id="product3" class="product-page">
       <h3 class="product-title">Die Urkraft aus dem Meer...unser Salz!</h3><br>
       <p class="product-text">
 Entsprechend allen Strukturen unseres K&ouml;rpers, besteht  auch unsere
@@ -179,6 +179,29 @@ Damit unterscheiden wir uns von 80% aller anderen Hersteller auf dem
   </div>
   </div>
   <div id="contact">
+<?php
+  $name = $_POST['name'];
+  $mail = $_POST['mail'];
+  $msg = $_POST['msg'];
+
+  $to = "admin@carinamitc.de";
+  $subject = "Kontaktformularnachricht von " . $name;
+ 
+    if ((!empty($name))&&(!empty($mail))&&(!empty($msg))) {
+ 
+      mail($to, $subject, $msg, 'From:' . $mail); //Mail versenden
+ 
+      //redirect("http://carinamitc.de/Amberpharm/amberpharm.html", 302);
+    }
+    else {
+      //redirect("http://carinamitc.de/Amberpharm/amberpharm.html", 302);
+    }
+
+  function redirect($url, $statusCode = 303) {
+    header('Location: ' . $url, true, $statusCode);
+    die();
+  }
+?>
     <div id="contact-info">
       <p>Amberpharm GmbH</p>
       <br>
@@ -190,37 +213,10 @@ Damit unterscheiden wir uns von 80% aller anderen Hersteller auf dem
       <p>Mail: info(at)amberpharm.de</p>
     </div>
     <div id="contact-form">
-
-      <?php
-  function mail() {
-  $name = $_POST['name'];
-  $mail = $_POST['mail'];
-  $subject = "Anfrage";
-  $msg = $_POST['msg'];
-
-  $to = "admin@carinamitc.de";
-  $subject = "Kontaktformularnachricht " + $subject  + " " + $name;
- 
-    if ((!empty($name))&&(!empty($mail))&&(!empty($msg))) {
- 
-      mail($to, $subject, $msg, 'From:' . $email); //Mail versenden
- 
-      //redirect("http://carinamitc.de/Amberpharm/amberpharm.html", 302);
-    }
-    else {
-      //redirect("http://carinamitc.de/Amberpharm/amberpharm.html", 302);
-    }
-  }
-
-  function redirect($url, $statusCode = 303) {
-    header('Location: ' . $url, true, $statusCode);
-    die();
-  }
-?>
-      <form action="amberpharm.html" method="post"
+      <form action="amberpharm.php" method="post"
             enctype="application/x-www-form-urlencoded">
-        <input id="contact-name" type="text" name="name" placeholder="Name">
-        <input id="contact-mail" type="email" name="mail" placeholder="E-Mail">
+        <input id="contact-name" name="name" type="text" placeholder="Name">
+        <input id="contact-mail" name="mail" type="email" placeholder="E-Mail">
         <textarea id="contact-msg" name="msg" placeholder="Nachricht"></textarea>
         <input id="contact-button" type=submit value="Abschicken">
       </form>
