Add captions for product selection and fix hover bug

--- a/Amberpharm/amberpharm.html
+++ b/Amberpharm/amberpharm.html
@@ -61,19 +61,22 @@ Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie co
   <div id="products">
     <div id="product-selection">
       <div id="kreis1" class="kreis" data-hoverobj="#kreis1"
-           data-product="#alge" data-dummy="#kreis1a">
+           data-product="#alge" data-dummy="#kreis1a" data-text="#alge-text">
         <div id="kreis1a" class="dummy"></div>
-        <div id="alge" class="product" data-product="#product1"></div>
+        <div id="alge" class="product"data-product="#product1"></div>
+        <div id="alge-text" class="caption">Genesis24</div>
       </div>
       <div id="kreis2" class="kreis" data-hoverobj="#kreis2"
-           data-product="#auster" data-dummy="#kreis2a">
+           data-product="#auster" data-dummy="#kreis2a" data-text="#auster-text">
         <div id="kreis2a" class="dummy"></div>
         <div id="auster" class="product" data-product="#product2"></div>
+        <div id="auster-text" class="caption">Pearl sun24</div>
       </div>
       <div id="kreis3" class="kreis" data-hoverobj="#kreis3"
-           data-product="#salz" data-dummy="#kreis3a">
+           data-product="#salz" data-dummy="#kreis3a" data-text="#salz-text">
         <div id="kreis3a" class="dummy"></div>
         <div id="salz" class="product" data-product="#product3"></div>
+        <div id="salz-text" class="caption">SALT care</div>
       </div>
     </div>
     <div id="product-frame">
