Add back button for product pages

--- a/Amberpharm/amberpharm.html
+++ b/Amberpharm/amberpharm.html
@@ -79,6 +79,7 @@ Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie co
         <div id="salz-text" class="caption">SALT care</div>
       </div>
     </div>
+    <div id="back-button"></div>
     <div id="product-frame">
     <div id="product1" class="product-page">
       <h3 class="product-title">Regeneriernde Kraft aus dem Meer...die Alge!</h3><br>
